@@ -23,11 +23,6 @@
 
   <import file="common-build.xml"/>
 
-  <property name="build.demo.template" value="src/demo/demo-build.template"/> 
-
-  <property name="demo.name" value="lucene-demos-${version}"/>
-  <property name="demo.war.name" value="luceneweb"/>
-
   <!-- Build classpath -->
   <path id="classpath">
     <pathelement location="${build.dir}/classes/java"/>
@@ -57,10 +52,10 @@
               excludes="contrib/db/*/lib/,contrib/*/ext-libs/,src/site/build/,contrib/benchmark/temp/,contrib/benchmark/work/"
   />
   <patternset id="binary.build.dist.patterns"
-              includes="${final.name}.jar,${demo.war.name}.war,${demo.name}.jar,docs/,contrib/*/*.jar,contrib/*/*.war, contrib/*/*/*.jar"
+              includes="${final.name}.jar,docs/,contrib/*/*.jar,contrib/*/*.war, contrib/*/*/*.jar"
   />
   <patternset id="binary.root.dist.patterns"
-              includes="src/demo/,src/jsp/,docs/,*.txt,contrib/*/README*,**/CHANGES.txt,lib/servlet-api-*.jar"
+              includes="docs/,*.txt,contrib/*/README*,**/CHANGES.txt"
               excludes="${build.demo.template}"
   />
 
@@ -150,71 +145,8 @@
   <!--                                                                    -->
   <!-- ================================================================== -->
 
-  <target name="jar-demo" depends="compile-demo">
-  	<sequential>
-  	  <build-manifest title="Lucene Search Engine: demos"/>
-      <jar
-        destfile="${build.dir}/${demo.name}.jar"
-        basedir="${build.dir}/classes/demo"
-        excludes="**/*.java"
-      	manifest="${manifest.file}">
-        <metainf dir="${common.dir}">
-          <include name="LICENSE.txt"/>
-          <include name="NOTICE.txt"/>
-        </metainf>
-      </jar>
-  	</sequential>
-  </target>
-
-  <target name="jar-demo-src" depends="compile-demo">
-  	<sequential>
-  	  <build-manifest title="Lucene Search Engine: demos"/>
-      <jar
-        destfile="${build.dir}/${demo.name}-src.jar"
-        basedir="src/demo"
-      	manifest="${manifest.file}">
-        <metainf dir="${common.dir}">
-          <include name="LICENSE.txt"/>
-          <include name="NOTICE.txt"/>
-        </metainf>
-      </jar>
-  	</sequential>
-  </target>
-
-  <target name="war-demo" depends="jar-core,jar-demo">
-    <sequential>
-      <build-manifest title="Lucene Search Engine: demos"/>
-  	  <war destfile="${build.dir}/${demo.war.name}.war"
-           webxml="src/jsp/WEB-INF/web.xml"
-      	   manifest="${manifest.file}">
-        <fileset dir="src/jsp" excludes="WEB-INF/web.xml"/>
-        <lib dir="${build.dir}" includes="${demo.name}.jar"/>
-        <lib dir="${build.dir}" includes="${final.name}.jar"/>
-        <metainf dir="${common.dir}">
-          <include name="LICENSE.txt"/>
-          <include name="NOTICE.txt"/>
-        </metainf>
-      </war>
-    </sequential>
-  </target>
-
   <target name="compile-core" depends="jflex-notice, javacc-notice, common.compile-core"/>
   
-  <!-- ================================================================== -->
-  <!-- B U I L D  D E M O                                                 -->
-  <!-- ================================================================== -->
-  <!--                                                                    -->
-  <!-- ================================================================== -->
-  <target name="compile-demo" depends="compile-core">
-    <mkdir dir="${build.dir}/classes/demo"/>
-
-    <compile
-      srcdir="src/demo"
-      destdir="${build.dir}/classes/demo">
-      <classpath refid="demo.classpath"/>
-    </compile>
-  </target>
-
   <!-- ================================================================== -->
   <!-- D O C U M E N T A T I O N                                          -->
   <!-- ================================================================== -->
@@ -225,7 +157,7 @@
   </target>
 
   <target name="javadocs" description="Generate javadoc" 
-          depends="javadocs-all, javadocs-core, javadocs-demo, javadocs-contrib">
+          depends="javadocs-all, javadocs-core, javadocs-contrib">
     <echo file="${javadoc.dir}/index.html" append="false">
 <![CDATA[<html><head><title>${Name} ${version} Javadoc Index</title></head>
 <body>
@@ -239,7 +171,6 @@
     <contrib-crawl target="javadocs-index.html" failonerror="false"/>
     <echo file="${javadoc.dir}/index.html" append="true"><![CDATA[
   </ul>
-  <li><a href="demo/index.html">Demo</a></li>
 </ul></body>]]></echo>
   </target>
 	
@@ -257,28 +188,13 @@
      <jarify basedir="${javadoc.dir}/core" destfile="${build.dir}/${final.name}-javadoc.jar"/>
     </sequential>
   </target>
-
-  <target name="javadocs-demo" description="Generate javadoc for demo classes">
-  	<sequential>
-      <mkdir dir="${javadoc.dir}/demo"/>
-      <invoke-javadoc
-        destdir="${javadoc.dir}/demo"
-      	title="${Name} ${version} demo API">
-        <sources>
-          <packageset dir="src/demo"/>
-          <link href=""/>
-        </sources>
-      </invoke-javadoc>
-      <jarify basedir="${javadoc.dir}/demo" destfile="${build.dir}/${demo.name}-javadoc.jar"/>
-    </sequential>
-  </target>
 	
   <target name="javadocs-contrib" description="Generate javadoc for contrib classes">
     <contrib-crawl target="javadocs"
                    failonerror="false"/>
   </target>
   	
-  <target name="javadocs-all" description="Generate javadoc for core, demo and contrib classes" depends="build-contrib">
+  <target name="javadocs-all" description="Generate javadoc for core and contrib classes" depends="build-contrib">
   	<sequential>
       <mkdir dir="${javadoc.dir}/all"/>
       <invoke-javadoc
@@ -286,8 +202,6 @@
         <sources>
           <!-- TODO: find a dynamic way to do include multiple source roots -->
           <packageset dir="src/java"/>
-
-          <packageset dir="src/demo"/>
 
           <!-- please keep this list up to date, and in alpha order...   -->
         
@@ -302,6 +216,7 @@
           <packageset dir="contrib/analyzers/stempel/src/java"/>
           <packageset dir="contrib/ant/src/java"/>
           <packageset dir="contrib/benchmark/src/java"/>
+          <packageset dir="contrib/demo/src/java"/>
           <packageset dir="contrib/icu/src/java"/>
           <packageset dir="contrib/db/bdb-je/src/java"/>
           <packageset dir="contrib/db/bdb/src/java"/>
@@ -326,12 +241,11 @@
   
           <group title="Core" packages="org.apache.*:org.apache.lucene.analysis:org.apache.lucene.analysis.standard*:org.apache.lucene.analysis.tokenattributes*"/>
   
-          <group title="Demo" packages="org.apache.lucene.demo*"/>
-  
           <group title="contrib: Analysis" packages="org.apache.lucene.analysis.*:org.tartarus.snowball*:org.egothor.stemmer*"/>
           <group title="contrib: Ant" packages="org.apache.lucene.ant*"/>
           <group title="contrib: Benchmark" packages="org.apache.lucene.benchmark*"/>
           <group title="contrib: ICU" packages="org.apache.lucene.collation*"/>
+          <group title="contrib: Demo" packages="org.apache.lucene.demo*"/>
           <group title="contrib: DB" packages="org.apache.lucene.store.db*:org.apache.lucene.store.je*:com.sleepycat*"/>
           <group title="contrib: Highlighter" packages="org.apache.lucene.search.highlight*:org.apache.lucene.search.vectorhighlight*"/>
           <group title="contrib: Instantiated" packages="org.apache.lucene.store.instantiated*"/>
@@ -357,15 +271,7 @@
   <!-- ================================================================== -->
   <!--                                                                    -->
   <!-- ================================================================== -->
-  <target name="package" depends="jar-core, javadocs, war-demo, build-contrib, init-dist, changes-to-html">
-     <copy file="${build.demo.template}" tofile="${build.dir}/build-demo.xml">
-        <filterset begintoken="@PLACEHOLDER_" endtoken="@"> 
-	  <filter token="version" value="${version}"/>
-	  <filter token="javac.source" value="${javac.source}"/>
-	  <filter token="javac.target" value="${javac.target}"/>
-        </filterset>
-     </copy>
-  </target>
+  <target name="package" depends="jar-core, javadocs, build-contrib, init-dist, changes-to-html"/>
 
   <target name="nightly" depends="test, package-tgz">
   </target>
@@ -405,7 +311,6 @@
       <tarfileset prefix="lucene-${version}" dir=".">
         <patternset refid="binary.root.dist.patterns"/>
       </tarfileset>
-      <tarfileset dir="${build.dir}" includes="build-demo.xml" fullpath="lucene-${version}/build.xml"/>
       <tarfileset prefix="lucene-${version}" dir="${build.dir}">
         <patternset refid="binary.build.dist.patterns"/>
       </tarfileset>
@@ -496,7 +401,7 @@
 
   <target name="dist-all" depends="dist, dist-src"/>
 
-  <target name="generate-maven-artifacts" depends="maven.ant.tasks-check, package, jar-src, jar-demo-src, javadocs">
+  <target name="generate-maven-artifacts" depends="maven.ant.tasks-check, package, jar-src, javadocs">
     <sequential>
       <m2-deploy pom.xml="lucene-parent-pom.xml.template"/>
       <m2-deploy pom.xml="lucene-core-pom.xml.template">
@@ -504,15 +409,6 @@
           <attach file="${build.dir}/${final.name}-src.jar"
                   classifier="sources"/>
           <attach file="${build.dir}/${final.name}-javadoc.jar"
-                  classifier="javadoc"/>
-        </artifact-attachments>
-      </m2-deploy>
-      
-      <m2-deploy pom.xml="lucene-demos-pom.xml.template">
-        <artifact-attachments>
-          <attach file="${build.dir}/${demo.name}-src.jar"
-                  classifier="sources"/>
-          <attach file="${build.dir}/${demo.name}-javadoc.jar"
                   classifier="javadoc"/>
         </artifact-attachments>
       </m2-deploy>
@@ -582,13 +478,13 @@
       <fileset dir="contrib/queryparser/src/java/org/apache/lucene/queryParser/standard/parser" includes="*.java">
         <containsregexp expression="Generated.*By.*JavaCC"/>
       </fileset>
-      <fileset dir="src/demo/org/apache/lucene/demo/html" includes="*.java">
+      <fileset dir="contrib/demo/src/java/org/apache/lucene/demo/html" includes="*.java">
         <containsregexp expression="Generated.*By.*JavaCC"/>
       </fileset>
     </delete>
   </target>
 
-  <target name="javacc" depends="init,javacc-check,clean-javacc,javacc-QueryParser,javacc-HTMLParser,javacc-contrib-queryparser"/>
+  <target name="javacc" depends="init,javacc-check,clean-javacc,javacc-QueryParser,javacc-contrib-queryparser,javacc-contrib-demo"/>
 
   <target name="javacc-QueryParser" depends="init,javacc-check" if="javacc.present">
     <sequential>
@@ -608,15 +504,16 @@
     </sequential>
   </target>	
   
-  <target name="javacc-HTMLParser" depends="init,javacc-check" if="javacc.present">
-    <invoke-javacc target="src/demo/org/apache/lucene/demo/html/HTMLParser.jj"
-                   outputDir="src/demo/org/apache/lucene/demo/html"
-    />
-  </target>
-	
   <target name="javacc-contrib-queryparser" depends="init,javacc-check" if="javacc.present">
     <ant target="javacc"
       dir="contrib/queryparser"
+      antfile="build.xml" 
+    />
+  </target>
+  
+  <target name="javacc-contrib-demo" depends="init,javacc-check" if="javacc.present">
+    <ant target="javacc"
+      dir="contrib/demo"
       antfile="build.xml" 
     />
   </target>
