@@ -1,0 +1,63 @@
+<?xml version="1.0"?>
+
+<!--
+    Licensed to the Apache Software Foundation (ASF) under one or more
+    contributor license agreements.  See the NOTICE file distributed with
+    this work for additional information regarding copyright ownership.
+    The ASF licenses this file to You under the Apache License, Version 2.0
+    the "License"); you may not use this file except in compliance with
+    the License.  You may obtain a copy of the License at
+ 
+        http://www.apache.org/licenses/LICENSE-2.0
+ 
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+ -->
+
+<project name="demo" default="default">
+
+  <description>
+    Lucene Demo
+  </description>
+
+  <property name="build.demo.template" value="src/java/demo-build.template"/> 
+
+  <property name="demo.name" value="lucene-demos-${version}"/>
+  <property name="demo.war.name" value="luceneweb"/>
+
+  <import file="../contrib-build.xml"/>
+
+  <target name="compile-core" depends="common.compile-core, war-demo" />
+
+  <target name="war-demo">
+    <sequential>
+      <build-manifest title="Lucene Search Engine: demos"/>
+  	  <war destfile="${build.dir}/${demo.war.name}.war"
+           webxml="src/jsp/WEB-INF/web.xml"
+      	   manifest="${manifest.file}">
+        <fileset dir="src/jsp" excludes="WEB-INF/web.xml"/>
+        <lib dir="${build.dir}/../.." includes="lucene-core-${version}.jar"/>
+        <lib dir="${build.dir}" includes="${final.name}.jar"/>
+        <metainf dir="${common.dir}">
+          <include name="LICENSE.txt"/>
+          <include name="NOTICE.txt"/>
+        </metainf>
+      </war>
+    </sequential>
+  </target>
+	
+  <target name="clean-javacc">
+    <fileset dir="src/java/org/apache/lucene/demo/html" includes="*.java">
+      <containsregexp expression="Generated.*By.*JavaCC"/>
+    </fileset>
+  </target>
+	
+  <target name="javacc" depends="init,javacc-check" if="javacc.present">
+    <invoke-javacc target="src/java/org/apache/lucene/demo/html/HTMLParser.jj"
+                     outputDir="src/java/org/apache/lucene/demo/html"
+    />
+  </target>
+</project>
